# OpenAccelerator

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI_IMPLEMENTATION_SUMMARY.md  COMPLETE_ANALYSIS_AND_IMPLEMENTATION.md  COMPLETE_MASTER_FIXES_SUMMARY.md  COMPLETE_MASTER_IMPLEMENTATION_GUIDE.md  COMPLETE_SYSTEM_FIXES_AND_VALIDATION_SUMMARY.md  COMPLETE_SYSTEM_PUBLICATION_SUMMARY.md  COMPLETE_SYSTEM_VALIDATION.py  COMPLETE_SYSTEM_VALIDATION_FIXED.py  COMPREHENSIVE_CODEBASE_FIXES_COMPLETION_SUMMARY.md  COMPREHENSIVE_FINAL_COMPLETION_SUMMARY.md  COMPREHENSIVE_FINAL_VALIDATION.py  COMPREHENSIVE_FIXES_AND_COMPLETION_SUMMARY.md  COMPREHENSIVE_IMPLEMENTATION_COMPLETION_SUMMARY.md  COMPREHENSIVE_MASTER_FIXES_IMPLEMENTATION.md  COMPREHENSIVE_SYSTEM_ENHANCEMENTS_SUMMARY.md  COMPREHENSIVE_SYSTEM_HEALTH_MONITOR.py  Dockerfile  EMOJI_REMOVAL_AND_COMPLETION_SUMMARY.md  FINAL_COMPLETE_IMPLEMENTATION_SUMMARY.md  FINAL_COMPLETE_IMPROVEMENTS_SUMMARY.md  FINAL_COMPLETION_SUMMARY.md  FINAL_COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  FINAL_COMPREHENSIVE_SYSTEM_SUCCESS_SUMMARY.md  FINAL_IMPROVEMENTS_SUMMARY.md  FINAL_PRODUCTION_READY_PUBLICATION_SUMMARY.md  FINAL_PUBLICATION_VALIDATION_REPORT.md  FINAL_RELEASE_SUMMARY.md  FINAL_SYSTEM_COMPLETION_REPORT.md  FINAL_SYSTEM_VALIDATION.py  GITHUB_PUBLICATION_GUIDE.md  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  PUBLICATION_READY_SUMMARY.md  PYPI_PUBLICATION_GUIDE.md  README.md  (+17 more)
.github/: DESCRIPTION.md
.github/workflows/: ci.yml  docs.yml  performance-tests.yml  security-scan.yml  tag-release.yml
docs/: CHANGELOG.rst  LICENSE.rst  benchmarking.rst  conf.py  contributing.rst  docker_guide.rst  index.rst  installation.rst  medical_guide.rst  quickstart.rst  testing.rst  user_guide.rst
docs/api/: accelerator.rst  agents.rst  benchmarks.rst  medical.rst  workloads.rst
docs/examples/: agent_integration.rst  basic_usage.rst  medical_workflows.rst  performance_optimization.rst
docs/tutorials/: agent_development.rst  custom_workloads.rst  getting_started.rst  medical_ai_workflows.rst  performance_tuning.rst
examples/: advanced_power_management.py  comprehensive_simulation.py  performance_optimization.py
reports/compliance/: fda_validation.json  final_validation_report.json  final_validation_results.json  hipaa_compliance.json  medical_compliance.json
reports/summaries/: CLI_IMPLEMENTATION_SUMMARY.md  COMPLETE_ANALYSIS_AND_IMPLEMENTATION.md  COMPLETE_MASTER_FIXES_SUMMARY.md  COMPLETE_MASTER_IMPLEMENTATION_GUIDE.md  COMPLETE_SYSTEM_FIXES_AND_VALIDATION_SUMMARY.md  COMPLETE_SYSTEM_PUBLICATION_SUMMARY.md  COMPREHENSIVE_FINAL_COMPLETION_SUMMARY.md  COMPREHENSIVE_IMPLEMENTATION_COMPLETION_SUMMARY.md  COMPREHENSIVE_MASTER_FIXES_IMPLEMENTATION.md  EMOJI_REMOVAL_AND_COMPLETION_SUMMARY.md  FINAL_COMPLETE_IMPLEMENTATION_SUMMARY.md  FINAL_COMPLETE_IMPROVEMENTS_SUMMARY.md  FINAL_COMPLETION_SUMMARY.md  FINAL_COMPREHENSIVE_SYSTEM_SUCCESS_SUMMARY.md  FINAL_IMPROVEMENTS_SUMMARY.md  FINAL_PRODUCTION_READY_PUBLICATION_SUMMARY.md  FINAL_RELEASE_SUMMARY.md  FINAL_SYSTEM_COMPLETION_REPORT.md  GITHUB_PUBLICATION_GUIDE.md  PYPI_PUBLICATION_GUIDE.md  SYSTEM_COMPLETION_REPORT.md
reports/system_health/: COMPREHENSIVE_SYSTEM_HEALTH_MONITOR.py
reports/validation/: COMPLETE_SYSTEM_VALIDATION.py  COMPLETE_SYSTEM_VALIDATION_FIXED.py  COMPREHENSIVE_FINAL_VALIDATION.py  FINAL_PUBLICATION_VALIDATION_REPORT.md  FINAL_SYSTEM_VALIDATION.py  SIMPLE_SYSTEM_VALIDATION.py  WORKING_SYSTEM_DEMO.py
scripts/: accelerator_cli.py  build_and_deploy.py  deploy.sh  fda_validation_check.py  generate_security_report.py  hipaa_compliance_check.py  medical_compliance_check.py
src/open_accelerator/: __init__.py
src/open_accelerator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/open_accelerator/ai/: __init__.py  agents.py  compound_ai.py  model_registry.py  multimodal_processor.py  reasoning_chains.py
src/open_accelerator/analysis/: __init__.py  medical_analysis.py  performance_analysis.py
src/open_accelerator/api/: __init__.py  __main__.py  main.py  middleware.py  models.py  routes.py
src/open_accelerator/cli/: __init__.py  __main__.py  animations.py  commands.py
src/open_accelerator/core/: __init__.py  accelerator.py  interconnect.py  memory.py  memory_system.py  pe.py  power.py  power_management.py  processing_element.py  reliability.py  security.py  systolic_array.py
src/open_accelerator/medical/: __init__.py  compliance.py  imaging.py  models.py  optimization.py  validation.py  workflows.py
src/open_accelerator/simulation/: __init__.py  simulator.py
src/open_accelerator/utils/: __init__.py  config.py  request_id.py
src/open_accelerator/workloads/: __init__.py  base.py  gemm.py  medical.py
tests/: conftest.py  test_accelerator.py  test_ai.py  test_api.py  test_basic.py  test_complete_system.py  test_config.py  test_core.py  test_integration.py  test_medical.py  test_publication_ready.py  test_workloads.py
tests/security/: test_api_security.py  test_auth_security.py  test_input_validation.py
tools/: benchmark_generator.py  config_generator.py  performance_analyzer.py  simulation_runner.py
